Now you can delete restaurants, see the menus, and add a new menu to a restaurant

--- a/templates/newRestaurant.html
+++ b/templates/newRestaurant.html
@@ -13,7 +13,7 @@
             Name: 
             <input type="text" id="name" name="name" style="color: #434343;background:#f3f3f3;">
             <button>Submit</button>
-            <a href="{{ url_for('ShowRestaurants') }}">Cancel</a>
+            <a href="{{ url_for('showRestaurants') }}">Cancel</a>
         </label>
     </form>
 </body>
