--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -19,9 +19,9 @@
         <hr>
     {% for restaurant in restaurants %}
         <div>
-            <p>{{ restaurant.name }}</p>
+            <p><a href="{{ url_for('showMenu', restaurant_id = restaurant.id) }}">{{ restaurant.name }}</a></p>
             <a href="{{ url_for('editRestaurant', restaurant_id = restaurant.id) }}">Edit</a>
-            <a href="#">Delete</a>
+            <a href="{{ url_for('deleteRestaurant', restaurant_id = restaurant.id) }}">Delete</a>
         </div>
         <hr>
     {% endfor %}
