--- a/templates/newRestaurant.html
+++ b/templates/newRestaurant.html
@@ -6,6 +6,16 @@
     <title>Add New Restaurant</title>
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul class=flashes>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    {% endwith %}
+
     <h1>Create new restaurant</h1>
 
     <form action="{{ url_for('newRestaurant') }}" method="POST">
